using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ShamanClass : BaseClass
{
    public override void Spell1() {
        Debug.Log("Shaman Spell 1");
    }

    public override void Spell2() {
        Debug.Log("Shaman Spell 2");
    }

    public override void Spell3() {
        Debug.Log("Shaman Spell 3");
    }

    public override void Spell4() {
        Debug.Log("Shaman Spell 4");
    }
}
